; ModuleID = '/home/carl/AnghaBench/i3/src/extr_ewmh.c_ewmh_update_focused.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_ewmh.c_ewmh_update_focused.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [48 x i8] c"Setting _NET_WM_STATE_FOCUSED for window = %d.\0A\00", align 1
@conn = common dso_local global i32 0, align 4
@A__NET_WM_STATE = common dso_local global i32 0, align 4
@A__NET_WM_STATE_FOCUSED = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [49 x i8] c"Removing _NET_WM_STATE_FOCUSED for window = %d.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ewmh_update_focused(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %2
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @DLOG(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @conn, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @A__NET_WM_STATE, align 4
  %13 = load i32, i32* @A__NET_WM_STATE_FOCUSED, align 4
  %14 = call i32 @xcb_add_property_atom(i32 %10, i32 %11, i32 %12, i32 %13)
  br label %23

15:                                               ; preds = %2
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @DLOG(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* @conn, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @A__NET_WM_STATE, align 4
  %21 = load i32, i32* @A__NET_WM_STATE_FOCUSED, align 4
  %22 = call i32 @xcb_remove_property_atom(i32 %18, i32 %19, i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %15, %7
  ret void
}

declare dso_local i32 @DLOG(i8*, i32) #1

declare dso_local i32 @xcb_add_property_atom(i32, i32, i32, i32) #1

declare dso_local i32 @xcb_remove_property_atom(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
